[package]
name = "adventofcode2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "*"
log = "0.4"
simple_logger = { version = "1.13.0", default-features = false, features = ["colors"] }
clap = "2.33.3"
itertools = "0.10.5"